# mesos-rust

./: Cargo.toml  Makefile  README.md  build.rs
resources/: mesos-c.h  mesos.proto
resources/mesos-c/: mesos_c.hpp  scheduler_driver.cpp  utils.hpp
src/: executor.rs  lib.rs  main.rs  messages.rs  proto.rs  scheduler.rs
src/native/: mesos_c.rs  mod.rs  tests.rs
src/proto/: mesos.rs  mod.rs
