[package]
name = "mesos"
description = "Rust language bindings for writing Apache Mesos frameworks."
version = "0.1.0"
homepage = "https://github.com/ConnorDoyle/mesos-rust"
repository = "https://github.com/ConnorDoyle/mesos-rust.git"
authors = ["Connor Doyle <connor.p.d@gmail.com>"]
build = "build.rs"
readme = "README.md"
license = "Apache-2.0"

[build-dependencies]
gcc = "0.3"

[dependencies]
libc = "0.1"

[dependencies.protobuf]
git = "https://github.com/stepancheg/rust-protobuf.git"
